sources/js/components/Header/Header.module.css
.header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: var(--header-height);
    padding: 0px 5px;
    background-color: transparent;
    box-shadow: 0px 0px 4px 2px var(--header-shadow-color);
    overflow: visible;
    z-index: 100;
}

/**
 * Move background to pseudo class element as backdrop filter won't work if nested.
 * https://stackoverflow.com/questions/60997948/backdrop-filter-not-working-for-nested-elements-in-chrome
 */
.header::before {
    content: '';
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    background-color: var(--header-background-color);
    backdrop-filter: var(--header-backdrop-filter, none);
    z-index: -1;
}

.left-content {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: var(--header-height);
    margin-left: 0;
    margin-right: auto;
}

.middle-content {
    position: absolute;
    display: flex;
    flex-direction: row;
    align-items: center;
    height: var(--header-height);
}

.right-content {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: var(--header-height);
    margin-left: auto;
    margin-right: 0;
}

.login-link {
    position: relative;
    margin-right: 20px;
    font-weight: bold;
    text-decoration: none;
    color: var(--header-text-color);
    filter: brightness(1);
    cursor: pointer;
    user-select: none;
    transition: filter 0.1s;
    -webkit-tap-highlight-color: transparent;
}

.login-link::before {
    content: '';
    position: absolute;
    top: -7px;
    left: -7px;
    display: block;
    width: 100%;
    height: 100%;
    padding: 7px;
}

.login-link:hover {
    text-decoration: underline;
    filter: brightness(1.2);
}

.login-link:focus {
    outline: 0;
}

/* Tablet & Mobile */
@media only screen and (width < 1024px) {
}

/* Tablet */
@media only screen and (740px < width < 1024px) {
}

/* Mobile */
@media only screen and (width <= 740px) {
}

/* Mini Mobile */
@media only screen and (width < 371px) {
    .right-content {
        display: none;
    }
}
@media only screen and (max-width: 370px) {
    .right-content {
        display: none;
    }
}

/* Unsupported */
@media only screen and (width < 260px) {
    .header {
        height: 100%;
    }
    .header div {
        display: none;
    }
    .header::before {
        display: block;
        content: 'The current device viewport dimension is unsupported.';
        font-size: 0.8rem;
        text-align: center;
    }
}
@media only screen and (max-width: 259px) {
    .header {
        height: 100%;
    }
    .header div {
        display: none;
    }
    .header::before {
        display: block;
        content: 'The current device viewport dimension is unsupported.';
        font-size: 0.8rem;
        text-align: center;
    }
}

